[gd_scene load_steps=2 format=3 uid="uid://b8wg07vy8tkfw"]

[ext_resource type="Script" uid="uid://d2hconms05tlu" path="res://lobby.gd" id="1_2m8fy"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2m8fy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185
anchor_top = 0.801
anchor_right = 0.277
anchor_bottom = 0.906
offset_left = -0.119995
offset_top = -0.0480347
offset_right = -0.104004
offset_bottom = -0.0880127
text = "HOST
"

[node name="join" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.696
anchor_top = 0.782
anchor_right = 0.786
anchor_bottom = 0.889
offset_left = 0.207947
offset_top = 0.263947
offset_right = -0.472046
offset_bottom = -0.0720215
text = "JOIN"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.206
offset_left = 251.0
offset_top = 12.0
offset_right = 619.688
offset_bottom = 52.0
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "player name"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "enter player name"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.066
anchor_top = 0.122
anchor_right = 0.916
anchor_bottom = 0.722
offset_left = -0.0319977
offset_top = -0.0560074
offset_right = -0.232056
offset_bottom = 0.143951
mouse_filter = 0
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
z_index = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.065
anchor_top = 0.123
anchor_right = 0.915
anchor_bottom = 0.724
offset_left = 0.119995
offset_top = 0.295998
offset_right = -0.0800781
offset_bottom = -0.152039

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.067
anchor_top = 0.801
anchor_right = 0.158
anchor_bottom = 0.904
offset_left = -0.184006
offset_top = -0.0480347
offset_right = -0.0160065
offset_bottom = 0.207947
text = "BACK"

[node name="password_dialog" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="password_dialog"]
layout_mode = 3
anchor_left = 0.337
anchor_top = 0.306
anchor_right = 0.628
anchor_bottom = 0.586
offset_left = -0.223999
offset_top = -0.28801
offset_right = 0.543945
offset_bottom = 0.271973

[node name="Panel" type="Panel" parent="password_dialog/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="password_dialog/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.164
anchor_right = 0.747
anchor_bottom = 0.527
offset_left = -0.104
offset_right = 0.00798035
offset_bottom = 0.0859985

[node name="Label" type="Label" parent="password_dialog/Control/VBoxContainer"]
layout_mode = 2
text = "password:"

[node name="TextEdit" type="TextEdit" parent="password_dialog/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "enter password here"

[node name="HBoxContainer" type="HBoxContainer" parent="password_dialog/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.193
anchor_top = 0.593
anchor_right = 0.723
anchor_bottom = 0.813
offset_left = 0.152
offset_top = 0.0739899
offset_right = 0.071991
offset_bottom = 0.0339966
theme_override_constants/separation = 30

[node name="cancel" type="Button" parent="password_dialog/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "cancel"

[node name="confirm" type="Button" parent="password_dialog/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "confirm"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="password_dialog/Control/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
